상품리스트나오게함함

--- a/brand.html
+++ b/brand.html
@@ -76,7 +76,7 @@
 	<script type="text/javascript"
 		src="https://pre.thesquaremall.co.kr/ux/js/web/lib/jquery.gaessamzie.flick.min.js"></script>
 	<!-- <script type="text/javascript" src="https://pre.thesquaremall.co.kr/ux/js/web/lib/video.min.js"></script> -->
-	<script src="https://pre.thesquaremall.co.kr/ux/js/web/goodsSession.js?v=20250805_0"></script>
+	<!-- <script src="https://pre.thesquaremall.co.kr/ux/js/web/goodsSession.js?v=20250805_0"></script> -->
 	<script type="text/javascript" src="https://pre.thesquaremall.co.kr/ux/js/mob/lib/confetti.browser.min.js"></script>
 	<script type="text/javascript" src="https://pre.thesquaremall.co.kr/ux/js/web/lib/jquery-ui.js"></script>
 
@@ -2328,7 +2328,7 @@
 			!function (f, b, e, v, n, t, s) {
 				if (f.fbq) return; n = f.fbq = function () {
 					n.callMethod ?
-					n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+						n.callMethod.apply(n, arguments) : n.queue.push(arguments)
 				};
 				if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
 				n.queue = []; t = b.createElement(e); t.async = !0;
