--- a/brand.html
+++ b/brand.html
@@ -2419,18 +2419,15 @@
 
 
 		<div id="container">
-
-
-
-
-
-
-
-
-
+			<!-- 워드앤코드 영역 추가 -->
+			<div class="title_box">
+				<h1>헤지스</h1>
+			</div>
+			<!-- //워드앤코드 영역 추가 -->
 			<div id="category_detail">
 				<div class="wrap">
 					<div class="category_con">
+						<!--
 						<div class="hd_root">
 							<ul class="location">
 
@@ -2448,7 +2445,79 @@
 								<li class="5depth" style="display:none"><a href="javascript:void(0);"></a></li>
 							</ul>
 						</div>
-
+						-->
+						<!-- 워드앤코드 영역 추가 -->
+						<div class="poster-wrap">
+							<div class="poster">
+								<span>
+									<img alt="이미지0" src="https://pre.thesquaremall.co.kr/ux/images/common/brand-ex-img.jpg" />
+								</span>
+							</div>
+							<div class="explain-box">
+								<div class="txt-box">
+									<p class="sub-tit">HAZZYS</p>
+									<p class="tit">헤지스</p>
+									<p class="txt">현재를 살아가는 사람들의 일상 속 행복한<br>
+									순간에 떠오르는 브랜드입니다.</p>
+								</div>
+								<div class="link_wrap">
+									<div class="wish_btn">
+										<input class="input_none input_like" id="like" type="checkbox">
+										<label id="wishBtn" class="like wish brandbtn " for="like" onclick="cfnPutWishList(this,event); return false;" data-goodscd="SQE000995779" data-plandtlsq=""><span>좋아요</span></label>
+										<div class="share">
+											<button type="button" class="share_btn">공유하기</button>
+										</div>
+									</div>
+								</div>
+								<div class="swiper-box">
+									<div class="swiper-container brand_thumb_swiper">
+										<div class="swiper-wrapper">
+											<div class="swiper-slide goods-slide">
+												<img alt="이미지0" src="https://pre.thesquaremall.co.kr/ux/images/common/brand-thumb-ex-img.jpg" />
+											</div>
+											<div class="swiper-slide goods-slide">
+												<img alt="이미지1" src="https://pre.thesquaremall.co.kr/ux/images/common/brand-thumb-ex-img.jpg" />
+											</div>
+										</div>
+										<div class="swiper-button-prev"></div>
+										<div class="swiper-button-next"></div>
+									</div>
+									<p class="brand_thumb-txt">헤지스 멤버스 15%할인 혜택</p>
+								</div>
+							</div>
+						</div>
+						<div class="center-cate-list">
+							<ul>
+								<li class="active">
+									<button type="button"><span>아우터</span></button>
+								</li>
+								<li>
+									<button type="button"><span>상의</span></button>
+								</li>
+								<li>
+									<button type="button"><span>팬츠</span></button>
+								</li>
+								<li>
+									<button type="button"><span>가방</span></button>
+								</li>
+								<li>
+									<button type="button"><span>스커트</span></button>
+								</li>
+								<li>
+									<button type="button"><span>상의</span></button>
+								</li>
+								<li>
+									<button type="button"><span>팬츠</span></button>
+								</li>
+								<li>
+									<button type="button"><span>가방</span></button>
+								</li>
+								<li>
+									<button type="button"><span>스커트</span></button>
+								</li>
+							</ul>
+						</div>
+						<!-- //워드앤코드 영역 추가 -->
 						<div class="hd_tit">
 							<h1 class="tit">전체</h1>
 						</div>
@@ -4106,7 +4175,15 @@
 
 									<div class="sorting_btn_wrap">
 
-
+										<!--워드앤코드 영역 추가-->
+										<div class="sorting_search" id="search">
+											<input type="text" placeholder="">
+											<p class="placeholder"><b>헤지스</b> 상품을 검색해보세요.</p>
+											<div class="icon_wrap">
+												<button type="button" class="search">검색</button>
+											</div>
+										</div>
+										<!--//워드앤코드 영역 추가-->
 
 
 										<button type="button" class="sorting_btn">신상품순</button>
@@ -7648,5 +7725,19 @@ a.src=b;a.async="true";d.appendChild(a)}function dsp_load_rtg(b){dsp_loadrtgJS((
 
 	</div>
 </body>
+<!-- 워드앤코드 코드 추가 -->
+<script>
+	 var mySwiper = new Swiper ('.brand_thumb_swiper', {
+		// If we need pagination
+		loop: true,
+		slidesPerView: 1,
+		// Navigation arrows
+		navigation: {
+		nextEl: '.brand_thumb_swiper .swiper-button-next',
+		prevEl: '.brand_thumb_swiper .swiper-button-prev',
+		},
 
+	})
+</script>
+<!-- //워드앤코드 영역 추가 -->
 </html>
